--- a/simple_votings/simple_votings/staticfiles/register/style.scss
+++ b/simple_votings/simple_votings/staticfiles/register/style.scss
@@ -10,7 +10,7 @@ html {
   font-family: "Roboto", sans-serif;
   color: #fff;
 }
-body {
+.body {
   background: #111;
   display: flex;
   min-height: 100vh;
