--- a/simple_votings/simple_votings/staticfiles/reset/confirm.css
+++ b/simple_votings/simple_votings/staticfiles/reset/confirm.css
@@ -49,10 +49,10 @@ html {
   transition: 0.3s;
 }
 
-body {
+.body {
   overflow: hidden;
   font-size: 1.2em;
-  background: #222;
+  background: #111;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -69,7 +69,7 @@ body {
   min-height: 100vh;
 }
 
-body form {
+.body form {
   background: rgba(255, 255, 255, 0.05);
   padding: 40px 20px;
   display: block;
@@ -94,7 +94,7 @@ body form {
   border-radius: 10px;
 }
 
-body form section {
+.body form section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -104,7 +104,7 @@ body form section {
           flex-direction: column;
 }
 
-body form input {
+.body form input {
   min-width: 200px;
   width: 12vw;
   padding: 10px 15px;
