--- a/simple_votings/templates/accounts/profile_statistic.html
+++ b/simple_votings/templates/accounts/profile_statistic.html
@@ -1,25 +1,21 @@
-{% extends "base.html" %}
-{% load static %}
-
+{% extends "base.html" %} {% load static %}
+<!--  -->
 {% block head %}
-    <title>Статистика</title>
+<title>Статистика</title>
 {% endblock %}
+<!-- -->
+{% block header %} СТАТИСТИКА {% endblock %}
+<!--  -->
 {% block content %}
-    <h1>Пользователь:{{ user.username }}</h1>
-    <h1>Дата регистрации:{{ date_reg }}</h1>
-    <h1>Текущая сессия на сайте:{{ time_online_hour }}</h1>
-    <hr>
-    <h2>Количество пройденных голосований: {{ count_of_votes }}</h2>
-    {% for user_vote in user_votes %}
-        <h1>Тема голосования:{{ user_vote.vote.theme }}</h1>
-        <h5>Ваши ответы</h5>
-            {% for i in user_vote.results %}
-                {% if i == ';' %}
-                <br>
-                <br>
-                {% else %}
-                {{ i }}
-                {% endif %}
-            {% endfor %}
-    {% endfor %}
-{% endblock %}
+<h1>Пользователь:{{ user.username }}</h1>
+<h1>Дата регистрации:{{ date_reg }}</h1>
+<h1>Текущая сессия на сайте:{{ time_online_hour }}</h1>
+<hr />
+<h2>Количество пройденных голосований: {{ count_of_votes }}</h2>
+{% for user_vote in user_votes %}
+<h1>Тема голосования:{{ user_vote.vote.theme }}</h1>
+<h5>Ваши ответы</h5>
+{% for i in user_vote.results %} {% if i == ';' %}
+<br />
+<br />
+{% else %} {{ i }} {% endif %} {% endfor %} {% endfor %} {% endblock %}
