--- a/simple_votings/simple_votings/staticfiles/base/style.css
+++ b/simple_votings/simple_votings/staticfiles/base/style.css
@@ -11,7 +11,7 @@ html {
   color: #fff;
 }
 
-body {
+.body {
   overflow: hidden;
   font-size: 1.2em;
   background: #222;
@@ -31,7 +31,7 @@ body {
   min-height: 100vh;
 }
 
-body p {
+.body p {
   background: rgba(255, 255, 255, 0.05);
   padding: 40px 20px;
   display: block;
@@ -42,11 +42,11 @@ body p {
   border-radius: 10px;
 }
 
-body p a {
+.body p a {
   cursor: pointer;
 }
 
-body form {
+.body form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -64,11 +64,11 @@ body form {
   min-width: 400px;
 }
 
-body form * {
+.body form * {
   margin: 10px 0;
 }
 
-body form input {
+.body form input {
   background: rgba(0, 0, 0, 0.2);
   border: none;
   margin: 0 0 20px 0;
@@ -76,14 +76,14 @@ body form input {
   font-size: 1.3em;
 }
 
-body form input.bt {
+.body form input.bt {
   color: #333;
   pointer-events: none;
   -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
-body form table {
+.body form table {
   -webkit-box-flex: 3;
       -ms-flex: 3;
           flex: 3;
@@ -96,7 +96,7 @@ body form table {
           flex-direction: column;
 }
 
-body form table tbody {
+.body form table tbody {
   -webkit-box-flex: 3;
       -ms-flex: 3;
           flex: 3;
@@ -114,7 +114,7 @@ body form table tbody {
           align-items: center;
 }
 
-body form table tbody tr {
+.body form table tbody tr {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -127,11 +127,11 @@ body form table tbody tr {
           justify-content: center;
 }
 
-body form table tbody tr td {
+.body form table tbody tr td {
   margin: 0;
 }
 
-body form table tbody tr label {
+.body form table tbody tr label {
   font-size: 1.1em;
 }
 /*# sourceMappingURL=style.css.map */
