--- a/simple_votings/simple_votings/staticfiles/login/style.scss
+++ b/simple_votings/simple_votings/staticfiles/login/style.scss
@@ -22,7 +22,7 @@ html {
   font-family: "Roboto", sans-serif;
   color: #fff;
 }
-body {
+.body {
   background: #111;
   display: flex;
   min-height: 100vh;
