--- a/simple_votings/simple_votings/staticfiles/msgpage/style.css
+++ b/simple_votings/simple_votings/staticfiles/msgpage/style.css
@@ -11,10 +11,10 @@ html {
   color: #fff;
 }
 
-body {
+.body {
   overflow: hidden;
   font-size: 1.2em;
-  background: #222;
+  background: #111;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -31,7 +31,7 @@ body {
   min-height: 100vh;
 }
 
-body p {
+.body p {
   background: rgba(255, 255, 255, 0.05);
   padding: 40px 20px;
   display: block;
@@ -42,7 +42,7 @@ body p {
   border-radius: 10px;
 }
 
-body p a {
+.body p a {
   cursor: pointer;
 }
 /*# sourceMappingURL=style.css.map */
