--- a/simple_votings/simple_votings/staticfiles/reset/confirm.scss
+++ b/simple_votings/simple_votings/staticfiles/reset/confirm.scss
@@ -33,10 +33,10 @@ html {
   pointer-events: none;
   transition: 0.3s;
 }
-body {
+.body {
   overflow: hidden;
   font-size: 1.2em;
-  background: #222;
+  background: #111;
   display: flex;
   flex-direction: column;
   justify-content: center;
