--- a/simple_votings/simple_votings/staticfiles/reset/form.scss
+++ b/simple_votings/simple_votings/staticfiles/reset/form.scss
@@ -12,10 +12,10 @@ html {
   color: #fff;
 }
 
-body {
+.body {
   overflow: hidden;
   font-size: 1.2em;
-  background: #222;
+  background: #111;
   display: flex;
   flex-direction: column;
   justify-content: center;
