--- a/simple_votings/templates/registration/logged_out.html
+++ b/simple_votings/templates/registration/logged_out.html
@@ -1,10 +1,14 @@
 {% extends "../base.html" %} {% load static %}
+<!--  -->
+{% block header %} ВЫХОД УСПЕШЕН {% endblock %}
+<!--  -->
 {% block head %}
+<!--  -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Выход</title>
 <link rel="stylesheet" href="{% static 'msgpage/style.css' %}" />
 {% endblock %}
-
+<!--  -->
 {% block content %}
 <p>
   Logged out!
