--- a/simple_votings/templates/registration/password_reset_done.html
+++ b/simple_votings/templates/registration/password_reset_done.html
@@ -1,17 +1,18 @@
-{% extends "../base.html" %}
-{% load static %}
-
+{% extends "../base.html" %} {% load static %}
+<!-- -->
+{% block header %} ВОССТАНОВЛЕНИЕ ПАРОЛЯ {% endblock %}
+<!--  -->
 {% block head %}
-  <title>Успешно отправлено!</title>
-  <link rel="stylesheet" href="{% static 'msgpage/style.css' %}" />
+<title>Успешно отправлено!</title>
+<link rel="stylesheet" href="{% static 'msgpage/style.css' %}" />
 {% endblock %}
-
+<!--  -->
 {% block content %}
-  <p>
-    Мы отправили вам инструкции для сброса пароля. Если письмо не пришло,
-    тогда проверьте папку спама.
-    <br />
-    <br />
-    <a href="{% url 'login' %}">К странице входа</a>
-  </p>
+<p>
+  Мы отправили вам инструкции для сброса пароля. Если письмо не пришло, тогда
+  проверьте папку спама.
+  <br />
+  <br />
+  <a href="{% url 'login' %}">К странице входа</a>
+</p>
 {% endblock %}
